# System-Design-Agent

./: .env.example  .gitignore  README.md  checkpoints.db-shm  checkpoints.db-wal  commit_all.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
knowledge_base/: ambassador.md  ambassador_pattern.md  anti_corruption_layer.md  anti_corruption_layer_pattern.md  api_gateway.md  api_routing_patterns.md  asynchronous_request_reply.md  backends_for_frontends.md  bff.md  bulkhead.md  bulkhead_pattern.md  cache_aside.md  choreography.md  circuit_breaker.md  circuit_breaker_pattern.md  claim_check.md  compensating_transaction.md  competing_consumers.md  compute_resource_consolidation.md  cqrs.md  database_per_service.md  deployment_stamps.md  event_sourcing.md  event_sourcing_pattern.md  external_configuration_store.md  federated_identity.md  gateway_aggregation.md  gateway_offloading.md  gateway_routing.md  geode.md  geode_pattern.md  health_endpoint_monitoring.md  hexagonal_architecture_pattern.md  hostname_routing_pattern.md  http_header_routing_pattern.md  index_table.md  leader_election.md  materialized_view.md  messaging_bridge.md  path_routing_pattern.md  (+28 more)
shadow_architect/agents/: architect.py  base.py  interviewer.py  researcher.py  scout.py  writer.py
shadow_architect/core/: config.py  orchestrator.py  state.py
shadow_architect/scripts/: sync_kb.py
shadow_architect/utils/: mcp_client.py  pypi_server.py  rag_manager.py
tests/: test_mcp.py  test_research.py
