[project]
name = "shadow-architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "duckduckgo-search>=8.1.1",
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "mcp>=1.26.0",
    "python-frontmatter>=1.1.0",
    "pydantic-settings>=2.2.1",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
]
